correção do mock e layout

--- a/i18n/strings.json
+++ b/i18n/strings.json
@@ -6,7 +6,7 @@
     "nav_week": "Weekly Radar",
     "nav_calendar": "Calendar",
     "hero_title_day": "Daily Radar",
-    "hero_sub_day": "Top 3 picks for quick decisions (free shows suggestion + risk).",
+    "hero_sub_day": "Quick picks: market suggestion + risk. Open Match Radar for details.",
     "hero_title_week": "Weekly Radar",
     "hero_sub_week": "Week overview (Mon–Sun). Transparency with results as games finish.",
     "hero_title_cal": "Calendar",
@@ -60,7 +60,48 @@
     "next7_tooltip": "Show next 7 days",
     "lang_current_tip": "Current language",
     "lang_switch_tip": "Switch language",
-    "form_missing_tip": "Historical match details not provided yet."
+    "form_missing_tip": "Historical match details not provided yet.",
+    "rank_tooltip": "Highlight order in the Radar (not a guarantee).",
+    "competition_tooltip": "Competition / league.",
+    "country_tooltip": "Country / region.",
+    "risk_short_label": "Risk",
+    "free_badge": "FREE",
+    "free_tooltip": "Available in the free version.",
+    "subtitle": "Betting tips & stats (not a bookmaker)",
+    "pitch_kicker": "Radar highlights interesting matches and suggests common markets using data. Use as guidance, not a guarantee.",
+    "about_cta": "How it works",
+    "browse_cta": "Open calendar",
+    "pitch_free_pro": "FREE: suggestion + risk • PRO: probability, EV, odds and advanced stats",
+    "markets_label": "Market examples:",
+    "market_1x": "1X",
+    "market_under": "Under 3.5",
+    "market_dnb": "DNB",
+    "market_handicap": "Handicap",
+    "market_1x_tip": "Double chance: home or draw.",
+    "market_under_tip": "Total goals under the line.",
+    "market_dnb_tip": "Draw No Bet: draw refunds.",
+    "market_handicap_tip": "Asian/European handicap line.",
+    "about_title": "How Radar works",
+    "about_intro": "RadarTips is a betting tips & stats site. We organize matches, suggest a market, and label risk. You decide if/when/where to bet.",
+    "about_steps_title": "In 30 seconds",
+    "about_step1": "1) Pick a match from highlights or the calendar.",
+    "about_step2": "2) Check the Radar suggestion and risk level.",
+    "about_step3": "3) Open “Match Radar” for form, goals and context.",
+    "about_note": "Informational content. Not a bookmaker. 18+.",
+    "theme_dark_short": "Dark",
+    "theme_light_short": "Light",
+    "theme_dark_tip": "Switch to dark theme",
+    "theme_light_tip": "Switch to light theme",
+    "word_home": "Home",
+    "word_away": "Away",
+    "word_draw": "Draw",
+    "market_desc_home_draw": "Home or Draw",
+    "market_desc_draw_away": "Draw or Away",
+    "market_desc_home_away": "Home or Away",
+    "market_under_prefix": "Under",
+    "market_over_prefix": "Over",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   },
   "pt": {
     "brand": "RadarTips",
@@ -69,7 +110,7 @@
     "nav_week": "Radar da Semana",
     "nav_calendar": "Calendário",
     "hero_title_day": "Radar do Dia",
-    "hero_sub_day": "Top 3 sugestões para decisão rápida (free mostra sugestão + risco).",
+    "hero_sub_day": "Dicas rápidas: mercado sugerido + risco. Abra o Radar do Jogo para ver detalhes.",
     "hero_title_week": "Radar da Semana",
     "hero_sub_week": "Visão da semana (Seg–Dom). Transparência com resultado conforme os jogos terminam.",
     "hero_title_cal": "Calendário",
@@ -123,7 +164,48 @@
     "next7_tooltip": "Mostrar os próximos 7 dias",
     "lang_current_tip": "Idioma atual",
     "lang_switch_tip": "Trocar idioma",
-    "form_missing_tip": "Detalhes do histórico ainda não informados."
+    "form_missing_tip": "Detalhes do histórico ainda não informados.",
+    "rank_tooltip": "Ordem de destaque no Radar (não é garantia).",
+    "competition_tooltip": "Competição / liga.",
+    "country_tooltip": "País / região.",
+    "risk_short_label": "Risco",
+    "free_badge": "FREE",
+    "free_tooltip": "Disponível na versão gratuita.",
+    "subtitle": "Dicas de apostas & estatísticas (não somos casa de apostas)",
+    "pitch_kicker": "O Radar destaca jogos interessantes e sugere mercados comuns com base em dados. Use como apoio, não como garantia.",
+    "about_cta": "Como funciona",
+    "browse_cta": "Ver calendário",
+    "pitch_free_pro": "FREE: sugestão + risco • PRO: probabilidade, EV, odds e estatísticas avançadas",
+    "markets_label": "Exemplos de mercados:",
+    "market_1x": "1X",
+    "market_under": "Menos de 3.5",
+    "market_dnb": "DNB",
+    "market_handicap": "Handicap",
+    "market_1x_tip": "Dupla chance: casa ou empate.",
+    "market_under_tip": "Total de gols abaixo da linha.",
+    "market_dnb_tip": "Empate devolve (Draw No Bet).",
+    "market_handicap_tip": "Linha de handicap asiático/europeu.",
+    "about_title": "Como o Radar funciona",
+    "about_intro": "RadarTips é um site de dicas e estatísticas. Nós organizamos jogos, sugerimos um mercado e classificamos o risco. Você decide se, quando e onde apostar.",
+    "about_steps_title": "Em 30 segundos",
+    "about_step1": "1) Escolha um jogo nos destaques ou no calendário.",
+    "about_step2": "2) Veja a sugestão do Radar e o nível de risco.",
+    "about_step3": "3) Clique em “Radar do Jogo” para forma, gols e contexto.",
+    "about_note": "Conteúdo informativo. Não somos casa de apostas. 18+.",
+    "theme_dark_short": "Dark",
+    "theme_light_short": "Claro",
+    "theme_dark_tip": "Ativar tema escuro",
+    "theme_light_tip": "Ativar tema claro",
+    "word_home": "Casa",
+    "word_away": "Fora",
+    "word_draw": "Empate",
+    "market_desc_home_draw": "Casa ou Empate",
+    "market_desc_draw_away": "Empate ou Fora",
+    "market_desc_home_away": "Casa ou Fora",
+    "market_under_prefix": "Menos de",
+    "market_over_prefix": "Mais de",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   },
   "es": {
     "brand": "RadarTips",
@@ -132,7 +214,7 @@
     "nav_week": "Radar de la Semana",
     "nav_calendar": "Calendario",
     "hero_title_day": "Radar del Día",
-    "hero_sub_day": "Top 3 sugerencias para decisión rápida (free muestra sugerencia + riesgo).",
+    "hero_sub_day": "Sugerencias rápidas: mercado + riesgo. Abre el Radar del Partido para detalles.",
     "hero_title_week": "Radar de la Semana",
     "hero_sub_week": "Resumen semanal (Lun–Dom). Transparencia con resultados al finalizar.",
     "hero_title_cal": "Calendario",
@@ -186,7 +268,48 @@
     "next7_tooltip": "Mostrar próximos 7 días",
     "lang_current_tip": "Idioma actual",
     "lang_switch_tip": "Cambiar idioma",
-    "form_missing_tip": "Aún no hay detalles del historial."
+    "form_missing_tip": "Aún no hay detalles del historial.",
+    "rank_tooltip": "Orden de destaque en el Radar (no es garantía).",
+    "competition_tooltip": "Competición / liga.",
+    "country_tooltip": "País / región.",
+    "risk_short_label": "Riesgo",
+    "free_badge": "FREE",
+    "free_tooltip": "Disponible en la versión gratuita.",
+    "subtitle": "Consejos de apuestas y estadísticas (no somos casa)",
+    "pitch_kicker": "El Radar destaca partidos interesantes y sugiere mercados comunes basados en datos. Guía, no garantía.",
+    "about_cta": "Cómo funciona",
+    "browse_cta": "Ver calendario",
+    "pitch_free_pro": "FREE: sugerencia + riesgo • PRO: probabilidad, EV, cuotas y estadísticas avanzadas",
+    "markets_label": "Ejemplos de mercados:",
+    "market_1x": "1X",
+    "market_under": "Menos de 3.5",
+    "market_dnb": "DNB",
+    "market_handicap": "Hándicap",
+    "market_1x_tip": "Doble oportunidad: local o empate.",
+    "market_under_tip": "Total de goles por debajo de la línea.",
+    "market_dnb_tip": "Draw No Bet: empate reembolsa.",
+    "market_handicap_tip": "Línea de hándicap.",
+    "about_title": "Cómo funciona el Radar",
+    "about_intro": "RadarTips es un sitio de consejos y estadísticas. Organizamos partidos, sugerimos un mercado y marcamos el riesgo. Tú decides si/cuándo/dónde apostar.",
+    "about_steps_title": "En 30 segundos",
+    "about_step1": "1) Elige un partido en los destacados o el calendario.",
+    "about_step2": "2) Revisa la sugerencia del Radar y el nivel de riesgo.",
+    "about_step3": "3) Abre el “Radar del Partido” para forma, goles y contexto.",
+    "about_note": "Contenido informativo. No somos casa de apuestas. 18+.",
+    "theme_dark_short": "Oscuro",
+    "theme_light_short": "Claro",
+    "theme_dark_tip": "Activar tema oscuro",
+    "theme_light_tip": "Activar tema claro",
+    "word_home": "Local",
+    "word_away": "Visitante",
+    "word_draw": "Empate",
+    "market_desc_home_draw": "Local o Empate",
+    "market_desc_draw_away": "Empate o Visitante",
+    "market_desc_home_away": "Local o Visitante",
+    "market_under_prefix": "Menos de",
+    "market_over_prefix": "Más de",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Hándicap"
   },
   "fr": {
     "brand": "RadarTips",
@@ -195,7 +318,7 @@
     "nav_week": "Radar de la Semaine",
     "nav_calendar": "Calendrier",
     "hero_title_day": "Radar du Jour",
-    "hero_sub_day": "Top 3 sélections pour décider vite (free: suggestion + risque).",
+    "hero_sub_day": "Choix rapides : marché suggéré + risque. Ouvrez le Radar du match pour les détails.",
     "hero_title_week": "Radar de la Semaine",
     "hero_sub_week": "Vue semaine (Lun–Dim). Transparence des résultats après les matchs.",
     "hero_title_cal": "Calendrier",
@@ -249,7 +372,48 @@
     "next7_tooltip": "Afficher les 7 prochains jours",
     "lang_current_tip": "Langue actuelle",
     "lang_switch_tip": "Changer de langue",
-    "form_missing_tip": "Détails d'historique non fournis pour l'instant."
+    "form_missing_tip": "Détails d'historique non fournis pour l'instant.",
+    "rank_tooltip": "Ordre de mise en avant (pas une garantie).",
+    "competition_tooltip": "Compétition / ligue.",
+    "country_tooltip": "Pays / région.",
+    "risk_short_label": "Risque",
+    "free_badge": "FREE",
+    "free_tooltip": "Disponible en version gratuite.",
+    "subtitle": "Conseils de paris & stats (pas un bookmaker)",
+    "pitch_kicker": "Le Radar met en avant des matchs intéressants et suggère des marchés courants via des données. Indication, pas garantie.",
+    "about_cta": "Comment ça marche",
+    "browse_cta": "Voir le calendrier",
+    "pitch_free_pro": "FREE : suggestion + risque • PRO : probabilité, EV, cotes et stats avancées",
+    "markets_label": "Exemples de marchés :",
+    "market_1x": "1X",
+    "market_under": "Moins de 3.5",
+    "market_dnb": "DNB",
+    "market_handicap": "Handicap",
+    "market_1x_tip": "Double chance : domicile ou nul.",
+    "market_under_tip": "Total de buts sous la ligne.",
+    "market_dnb_tip": "Draw No Bet : nul remboursé.",
+    "market_handicap_tip": "Ligne de handicap.",
+    "about_title": "Comment fonctionne le Radar",
+    "about_intro": "RadarTips est un site de conseils & statistiques. Nous organisons les matchs, suggérons un marché et indiquons le risque. Vous décidez si/quand/où parier.",
+    "about_steps_title": "En 30 secondes",
+    "about_step1": "1) Choisissez un match (top) ou dans le calendrier.",
+    "about_step2": "2) Consultez la suggestion et le niveau de risque.",
+    "about_step3": "3) Ouvrez le “Radar du match” pour forme, buts et contexte.",
+    "about_note": "Contenu informatif. Pas un bookmaker. 18+.",
+    "theme_dark_short": "Sombre",
+    "theme_light_short": "Clair",
+    "theme_dark_tip": "Activer le thème sombre",
+    "theme_light_tip": "Activer le thème clair",
+    "word_home": "Domicile",
+    "word_away": "Extérieur",
+    "word_draw": "Nul",
+    "market_desc_home_draw": "Domicile ou Nul",
+    "market_desc_draw_away": "Nul ou Extérieur",
+    "market_desc_home_away": "Domicile ou Extérieur",
+    "market_under_prefix": "Moins de",
+    "market_over_prefix": "Plus de",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   },
   "de": {
     "brand": "RadarTips",
@@ -258,7 +422,7 @@
     "nav_week": "Wochenradar",
     "nav_calendar": "Kalender",
     "hero_title_day": "Tagesradar",
-    "hero_sub_day": "Top-3-Tipps für schnelle Entscheidungen (free: Tipp + Risiko).",
+    "hero_sub_day": "Schnelle Tipps: Markt + Risiko. Öffne den Match-Radar für Details.",
     "hero_title_week": "Wochenradar",
     "hero_sub_week": "Wochenübersicht (Mo–So). Transparenz mit Ergebnissen nach Spielende.",
     "hero_title_cal": "Kalender",
@@ -312,6 +476,47 @@
     "next7_tooltip": "Nächste 7 Tage anzeigen",
     "lang_current_tip": "Aktuelle Sprache",
     "lang_switch_tip": "Sprache wechseln",
-    "form_missing_tip": "Historische Match-Details noch nicht verfügbar."
+    "form_missing_tip": "Historische Match-Details noch nicht verfügbar.",
+    "rank_tooltip": "Hervorhebungsrang (keine Garantie).",
+    "competition_tooltip": "Wettbewerb / Liga.",
+    "country_tooltip": "Land / Region.",
+    "risk_short_label": "Risiko",
+    "free_badge": "FREE",
+    "free_tooltip": "In der Gratisversion verfügbar.",
+    "subtitle": "Wett-Tipps & Statistiken (kein Buchmacher)",
+    "pitch_kicker": "Der Radar hebt interessante Spiele hervor und schlägt gängige Märkte datenbasiert vor. Hinweis, keine Garantie.",
+    "about_cta": "So funktioniert’s",
+    "browse_cta": "Kalender öffnen",
+    "pitch_free_pro": "FREE: Vorschlag + Risiko • PRO: Wahrscheinlichkeit, EV, Quoten und erweiterte Statistiken",
+    "markets_label": "Markt-Beispiele:",
+    "market_1x": "1X",
+    "market_under": "Unter 3.5",
+    "market_dnb": "DNB",
+    "market_handicap": "Handicap",
+    "market_1x_tip": "Doppelte Chance: Heim oder Unentschieden.",
+    "market_under_tip": "Gesamttore unter der Linie.",
+    "market_dnb_tip": "Draw No Bet: Unentschieden = Einsatz zurück.",
+    "market_handicap_tip": "Handicap-Linie.",
+    "about_title": "So funktioniert der Radar",
+    "about_intro": "RadarTips ist eine Seite für Wett-Tipps & Statistiken. Wir ordnen Spiele, schlagen einen Markt vor und markieren das Risiko. Du entscheidest ob/wann/wo du wettest.",
+    "about_steps_title": "In 30 Sekunden",
+    "about_step1": "1) Wähle ein Spiel aus den Highlights oder dem Kalender.",
+    "about_step2": "2) Prüfe Vorschlag und Risiko.",
+    "about_step3": "3) Öffne den Match-Radar für Form, Tore und Kontext.",
+    "about_note": "Informationsinhalt. Kein Buchmacher. 18+.",
+    "theme_dark_short": "Dunkel",
+    "theme_light_short": "Hell",
+    "theme_dark_tip": "Dunkles Design aktivieren",
+    "theme_light_tip": "Helles Design aktivieren",
+    "word_home": "Heim",
+    "word_away": "Auswärts",
+    "word_draw": "Unentschieden",
+    "market_desc_home_draw": "Heim oder Unentschieden",
+    "market_desc_draw_away": "Unentschieden oder Auswärts",
+    "market_desc_home_away": "Heim oder Auswärts",
+    "market_under_prefix": "Unter",
+    "market_over_prefix": "Über",
+    "market_dnb_fmt": "DNB {side}",
+    "word_handicap": "Handicap"
   }
 }
