Inclusão da atualização live

--- a/i18n/strings.json
+++ b/i18n/strings.json
@@ -34,6 +34,13 @@
     "result_pending": "PENDING",
     "result_green": "GREEN",
     "result_red": "RED",
+    "live_label": "LIVE",
+    "ft_label": "FT",
+    "pending_label": "—",
+    "outcome_green": "GREEN",
+    "outcome_red": "RED",
+    "outcome_void": "VOID",
+    "outcome_pending": "PENDING",
     "match_radar": "Match Radar",
     "match_radar_tip": "Open match details",
     "risk_tooltip": "Risk level of the pick (volatility / chance of loss).",
@@ -138,6 +145,13 @@
     "result_pending": "PENDENTE",
     "result_green": "GREEN",
     "result_red": "RED",
+    "live_label": "AO VIVO",
+    "ft_label": "FT",
+    "pending_label": "—",
+    "outcome_green": "GREEN",
+    "outcome_red": "RED",
+    "outcome_void": "VOID",
+    "outcome_pending": "PENDENTE",
     "match_radar": "Radar do Jogo",
     "match_radar_tip": "Abrir detalhes da partida",
     "risk_tooltip": "Nível de risco do palpite (variância / chance de dar ruim).",
@@ -242,6 +256,13 @@
     "result_pending": "PENDIENTE",
     "result_green": "GREEN",
     "result_red": "RED",
+    "live_label": "EN VIVO",
+    "ft_label": "FT",
+    "pending_label": "—",
+    "outcome_green": "GREEN",
+    "outcome_red": "RED",
+    "outcome_void": "VOID",
+    "outcome_pending": "PENDIENTE",
     "match_radar": "Radar del Partido",
     "match_radar_tip": "Abrir detalles del partido",
     "risk_tooltip": "Nivel de riesgo del pronóstico (volatilidad / chance de pérdida).",
@@ -346,6 +367,13 @@
     "result_pending": "EN ATTENTE",
     "result_green": "GREEN",
     "result_red": "RED",
+    "live_label": "EN DIRECT",
+    "ft_label": "FT",
+    "pending_label": "—",
+    "outcome_green": "GREEN",
+    "outcome_red": "RED",
+    "outcome_void": "VOID",
+    "outcome_pending": "EN ATTENTE",
     "match_radar": "Radar du Match",
     "match_radar_tip": "Ouvrir les détails du match",
     "risk_tooltip": "Niveau de risque du pronostic (volatilité / chance de perte).",
@@ -450,6 +478,13 @@
     "result_pending": "AUSSTEHEND",
     "result_green": "GREEN",
     "result_red": "RED",
+    "live_label": "LIVE",
+    "ft_label": "FT",
+    "pending_label": "—",
+    "outcome_green": "GREEN",
+    "outcome_red": "RED",
+    "outcome_void": "VOID",
+    "outcome_pending": "AUSSTEHEND",
     "match_radar": "Spiel-Radar",
     "match_radar_tip": "Spieldetails öffnen",
     "risk_tooltip": "Risikostufe des Tipps (Volatilität / Verlustchance).",
