feat: tabela de mercados no modal + analysis.markets no backend + docs

--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -11,7 +11,25 @@
   "round": "Rodada",
   "locked": "Ativar PRO",
   "no_slot": "Sem Radar disponível",
-  "risk": { "low": "Baixo", "medium": "Médio", "high": "Alto" },
-  "status": { "pending": "Pendente", "won": "Green", "lost": "Red", "void": "Anulado" },
-  "g": "G"
+  "risk": {
+    "low": "Baixo",
+    "medium": "Médio",
+    "high": "Alto"
+  },
+  "status": {
+    "pending": "Pendente",
+    "won": "Green",
+    "lost": "Red",
+    "void": "Anulado"
+  },
+  "g": "G",
+  "markets_title": "Mercados analisados",
+  "markets_tooltip": "Outros mercados sugeridos para a partida (com risco e justificativa).",
+  "market_col": "Mercado",
+  "entry_col": "Entrada sugerida",
+  "risk_col": "Risco",
+  "just_col": "Justificativa",
+  "confidence_label": "Confiança",
+  "risk_volatile": "Volátil",
+  "no_markets": "Sem mercados suficientes para esta partida."
 }
