--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,7 +11,25 @@
   "round": "Round",
   "locked": "Unlock PRO",
   "no_slot": "No Radar available",
-  "risk": { "low": "Low", "medium": "Medium", "high": "High" },
-  "status": { "pending": "Pending", "won": "Won", "lost": "Lost", "void": "Void" },
-  "g": "G"
+  "risk": {
+    "low": "Low",
+    "medium": "Medium",
+    "high": "High"
+  },
+  "status": {
+    "pending": "Pending",
+    "won": "Won",
+    "lost": "Lost",
+    "void": "Void"
+  },
+  "g": "G",
+  "markets_title": "Analyzed markets",
+  "markets_tooltip": "Other suggested markets for this match (with risk and a short justification).",
+  "market_col": "Market",
+  "entry_col": "Suggested entry",
+  "risk_col": "Risk",
+  "just_col": "Justification",
+  "confidence_label": "Confidence",
+  "risk_volatile": "Volatile",
+  "no_markets": "Not enough markets for this match."
 }
